--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "dependencies": {
         "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
+        "cors": "^2.8.5",
         "express": "^4.17.1",
-        "express-fileupload": "^1.1.7-alpha.2",
+        "express-fileupload": "^1.1.7-alpha.3",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.9.7",
+        "mongoose": "^5.9.10",
         "mongoose-unique-validator": "^2.0.3",
         "serve-index": "^1.9.1"
     },
     "devDependencies": {
-        "nodemon": "^2.0.2"
+        "nodemon": "^2.0.3"
     }
 }
